# mycc

./: .gitignore  CMakeLists.txt  Makefile  README.md  flags.mk  simple_file.c
ast/: Makefile
ast/include/mycc-ast/: code_block.h  constant.h  expression.h  external_decl.h  location.h  print_indent.h  statement.h  translation_unit.h
ast/src/: add_expr.c  bit_shift_expr.c  constant.c  mult_expr.c  primary_expr.c  print_indent.c  statement.c  translation_unit.c
libs/: Makefile
libs/include/mycc-libs/: vector.h
libs/src/: vector.c
parser/: CMakeLists.txt  Makefile
parser/include/mycc-parser/: tokenizer.h
parser/src/: parser.y  tokenizer.l  tokenizer_main.c  tokenizer_main.cpp
samples/: 2-simple-struct.c  3-printf.c  4-lol.c  5-lol2.c
simplified-lang-tests/: 1-multiplicative-return-main.c  1-simple_main.c  2-additive-return-main.c  3-bit_shift-return-main.c  4-relative-return-main.c
src/: M-hashtable.c  c_compiler.c  c_compiler.h  c_compiler.l  c_compiler.redef.h  c_compiler.y  c_preprocessor.l  c_preprocessor.redef.h  c_preprocessor.y  parser_main.c  vector.c  vector.h
tests/: 01-typedef.c  02-global_variable.c  CMakeLists.txt
thoughts&plans/: manual-tokenizing.txt
